# a2a-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/: settings.local.json
examples/: echo_agent.rs  echo_agent_file.rs  hello_client.rs  multi_turn.rs  streaming_client.rs  tui_monitor.rs  verify_enum_serialization.rs  verify_event_kinds.rs  verify_part_serialization.rs  verify_send_message_response.rs
src/: builders.rs  error.rs  lib.rs  types.rs
src/client/: a2a_client.rs  card_resolver.rs  mod.rs  sse.rs  transport.rs
src/server/: agent_executor.rs  axum_integration.rs  event_queue.rs  file_task_store.rs  mod.rs  request_handler.rs  task_manager.rs  task_store.rs  task_updater.rs
src/utils/: artifact.rs  constants.rs  extensions.rs  message.rs  mod.rs  parts.rs  task.rs
tasks/: 1b2c19fb-ec59-40f5-a87f-d94e1fcd7a8a.json  22020f9f-4d6e-49d6-8e2a-c0e59f7bc020.json  4909625d-7a80-41e4-bb84-907ba193a54f.json  5678c8aa-1f9d-4705-a48b-a96ccebe09ba.json  60a54edb-5db2-4384-931a-76fccc80c955.json  ec83bdb4-ea8e-4512-b8e1-6dbe81240f88.json  edb5ba0d-dcde-4e5c-b2fd-bf58ce65c254.json
tests/: agent_card.rs  agent_interface_verification.rs  client_auth_middleware.rs  client_base_client.rs  client_card_resolver.rs  client_client_factory.rs  client_errors.rs  client_jsonrpc_transport.rs  client_legacy.rs  client_server_integration.rs  client_task_manager.rs  comprehensive_json_compliance.rs  cross_language_compliance.rs  error_handling.rs  extensions_common.rs  golden_json_fixtures.rs  kind_field_verification.rs  serialization.rs  server_agent_executor.rs  server_event_queue.rs  server_integration.rs  server_request_handler.rs  server_task_manager.rs  server_task_store.rs  server_task_updater.rs  stream_response_json_verification.rs  streaming_integration.rs  task_lifecycle.rs  utils_artifact.rs  utils_constants.rs  utils_message.rs  utils_parts.rs  utils_task.rs  verify_push_notification_auth_schemes.rs
tests/common/: mod.rs
tests/fixtures/: agent_capabilities_full.json  agent_card_minimal.json  agent_card_with_extensions.json  agent_card_with_security.json  agent_card_with_signatures.json  agent_interface.json  agent_interface_with_version.json  agent_provider.json  agent_skill.json  artifact.json  artifact_file_parts.json  artifact_update_append.json  (+48 more)
